# SparkGen

./: README.md  cookiecutter.json  pyproject.toml  setup_template_structure.sh
{{cookiecutter.project_slug}}/: LICENSE  README.md  evaluate_api.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: cd.yml  ci.yml
{{cookiecutter.project_slug}}/ci_cd/: Dockerfile
{{cookiecutter.project_slug}}/ci_cd/bamboo/: bamboo-spec.yaml  push_eventhub_logs.py
{{cookiecutter.project_slug}}/config/: channels.example.yaml  knowledge_bases.example.yaml  mcp_connectors.yaml  workflow.example.yaml
{{cookiecutter.project_slug}}/contexts/: default.md  product.md  responsible_ai.md
{{cookiecutter.project_slug}}/docs/: context_engineering_spec.md  functional_specification.md  orchestration_patterns.md  spec_as_code.md  {{cookiecutter.project_slug}}_Technical_Specification.md
{{cookiecutter.project_slug}}/prompts/: coder.md  researcher.md
{{cookiecutter.project_slug}}/tests/: test_a2a_protocol.py  test_agent_flow.py  test_api_integration.py  test_channel_config.py  test_mcp_client_demo.py  test_mcp_config.py  test_spec_loader.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/agents/: agent.py  eval_agent.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/callbacks/: callback_handler.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/channel/: __init__.py  config.py  connectors.py
(+39 files in other folders)
