[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.0.0"
fastapi = {version = "^0.100.0", optional = true}
uvicorn = {version = "^0.20.0", optional = true}
jinja2 = "^3.1.0"
requests = "^2.28.0"
psutil = "^5.9.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
pydantic = "^2.0.0"
numpy = "^1.26.0"
langfuse = "^2.0.0"
azure-eventhub = "^5.12.0"

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
